web/1.log

> api-web@1.0.0 dev /app
> node build/dev-server.js

[HPM] Proxy created: /api  ->  http://api-server:2018
> Starting dev server...
ts-loader: Using typescript@2.5.2 and /app/tsconfig.json
 DONE  Compiled successfully in 7614ms2:23:41 PM

> Listening at http://localhost:2017

 WAIT  Compiling...2:48:28 PM

 DONE  Compiled successfully in 1659ms2:48:30 PM

 WAIT  Compiling...2:48:30 PM

 DONE  Compiled successfully in 1248ms2:48:32 PM

 WAIT  Compiling...2:50:59 PM

 DONE  Compiled successfully in 1604ms2:51:01 PM

 WAIT  Compiling...2:51:01 PM

 DONE  Compiled successfully in 997ms2:51:02 PM

 WAIT  Compiling...3:30:45 PM

 DONE  Compiled successfully in 1477ms3:30:47 PM

 WAIT  Compiling...3:30:47 PM

 DONE  Compiled successfully in 1298ms3:30:49 PM

 WAIT  Compiling...3:31:39 PM

 DONE  Compiled successfully in 511ms3:31:40 PM

 WAIT  Compiling...3:31:40 PM

 DONE  Compiled successfully in 1748ms3:31:42 PM

 WAIT  Compiling...4:15:21 PM

 DONE  Compiled successfully in 1551ms4:15:23 PM

 WAIT  Compiling...4:15:23 PM

 DONE  Compiled successfully in 1201ms4:15:24 PM

 WAIT  Compiling...5:14:35 PM

 DONE  Compiled successfully in 1265ms5:14:36 PM

 WAIT  Compiling...5:14:37 PM

 DONE  Compiled successfully in 1324ms5:14:38 PM

 WAIT  Compiling...5:52:40 PM

 DONE  Compiled successfully in 1419ms5:52:42 PM

 WAIT  Compiling...5:52:42 PM

 DONE  Compiled successfully in 1173ms5:52:43 PM

 WAIT  Compiling...5:54:37 PM

 DONE  Compiled successfully in 1362ms5:54:39 PM

 WAIT  Compiling...5:54:39 PM

 DONE  Compiled successfully in 1288ms5:54:40 PM

 WAIT  Compiling...5:58:25 PM

 DONE  Compiled successfully in 1459ms5:58:27 PM

 WAIT  Compiling...5:58:27 PM

 DONE  Compiled successfully in 1011ms5:58:28 PM

 WAIT  Compiling...9:12:06 AM

 DONE  Compiled successfully in 1384ms9:12:08 AM

 WAIT  Compiling...9:12:08 AM

 DONE  Compiled successfully in 1292ms9:12:09 AM

 WAIT  Compiling...9:42:37 AM

 DONE  Compiled successfully in 1286ms9:42:39 AM

 WAIT  Compiling...9:42:39 AM

 DONE  Compiled successfully in 1623ms9:42:41 AM

 WAIT  Compiling...9:59:53 AM

 DONE  Compiled successfully in 1234ms9:59:55 AM

 WAIT  Compiling...9:59:55 AM

 DONE  Compiled successfully in 1420ms9:59:56 AM

 WAIT  Compiling...10:22:54 AM

 ERROR  Failed to compile with 2 errors10:22:55 AM

 error  in /app/src/components/project/proApiDetail.vue.ts

(273,7): error TS2304: Cannot find name 'level'.

 error  in /app/src/components/project/proApiDetail.vue.ts

(277,14): error TS2304: Cannot find name 'level'.

 WAIT  Compiling...10:22:55 AM

 ERROR  Failed to compile with 3 errors10:22:57 AM

 error  in /app/src/components/project/proApiDetail.vue.ts

(273,7): error TS2304: Cannot find name 'level'.

 error  in /app/src/components/project/proApiDetail.vue.ts

(277,14): error TS2304: Cannot find name 'level'.

 error  in ./src/components/project/proApiDetail.vue


  ✘  http://eslint.org/docs/rules/no-undef  'level' is not defined  
  /app/src/components/project/proApiDetail.vue:273:7
        level = row.level + 1
         ^

  ✘  http://eslint.org/docs/rules/no-undef  'level' is not defined  
  /app/src/components/project/proApiDetail.vue:277:14
        level: level,
                ^


✘ 2 problems (2 errors, 0 warnings)


Errors:
  2  http://eslint.org/docs/rules/no-undef

 @ ./src/router.ts 35:20-64
 @ ./src/main.ts
 @ multi ./build/dev-client ./src/main.ts

 WAIT  Compiling...10:23:29 AM

 ERROR  Failed to compile with 3 errors10:23:31 AM

 error  in /app/src/components/project/proApiDetail.vue.ts

(273,7): error TS2304: Cannot find name 'level'.

 error  in /app/src/components/project/proApiDetail.vue.ts

(277,14): error TS2304: Cannot find name 'level'.

 error  in ./src/components/project/proApiDetail.vue


  ✘  http://eslint.org/docs/rules/no-undef  'level' is not defined  
  /app/src/components/project/proApiDetail.vue:273:7
        level = row.level + 1
         ^

  ✘  http://eslint.org/docs/rules/no-undef  'level' is not defined  
  /app/src/components/project/proApiDetail.vue:277:14
        level: level,
                ^


✘ 2 problems (2 errors, 0 warnings)


Errors:
  2  http://eslint.org/docs/rules/no-undef

 @ ./src/router.ts 35:20-64
 @ ./src/main.ts
 @ multi ./build/dev-client ./src/main.ts

 WAIT  Compiling...10:23:31 AM

 DONE  Compiled successfully in 1010ms10:23:32 AM

 WAIT  Compiling...5:18:15 PM

 DONE  Compiled successfully in 1285ms5:18:16 PM

 WAIT  Compiling...5:18:16 PM

 DONE  Compiled successfully in 1620ms5:18:18 PM

 WAIT  Compiling...5:20:53 PM

 DONE  Compiled successfully in 176ms5:20:53 PM

 WAIT  Compiling...5:20:53 PM

 ERROR  Failed to compile with 1 errors5:20:56 PM

 error  in /app/src/components/project/proApiList.vue.ts

(88,18): error TS2339: Property 'refreshApiList' does not exist on type 'proApiList'.

 WAIT  Compiling...5:20:56 PM

 ERROR  Failed to compile with 1 errors5:20:57 PM

 error  in /app/src/components/project/proApiList.vue.ts

(88,18): error TS2339: Property 'refreshApiList' does not exist on type 'proApiList'.

 WAIT  Compiling...5:21:23 PM

 ERROR  Failed to compile with 1 errors5:21:24 PM

 error  in /app/src/components/project/proApiList.vue.ts

(88,18): error TS2339: Property 'refreshApiList' does not exist on type 'proApiList'.

 WAIT  Compiling...5:21:24 PM

 DONE  Compiled successfully in 1805ms5:21:26 PM

 WAIT  Compiling...5:48:10 PM

 DONE  Compiled successfully in 3879ms5:48:14 PM

 WAIT  Compiling...5:48:14 PM

 DONE  Compiled successfully in 1824ms5:48:16 PM

 WAIT  Compiling...9:03:08 AM

 DONE  Compiled successfully in 2009ms9:03:11 AM

 WAIT  Compiling...9:03:11 AM

 DONE  Compiled successfully in 1845ms9:03:13 AM

 WAIT  Compiling...9:32:57 AM

 DONE  Compiled successfully in 819ms9:32:58 AM

 WAIT  Compiling...9:32:58 AM

 DONE  Compiled successfully in 2031ms9:33:00 AM

 WAIT  Compiling...4:48:14 PM

 DONE  Compiled successfully in 3167ms4:48:17 PM

 WAIT  Compiling...4:48:17 PM

 DONE  Compiled successfully in 1285ms4:48:19 PM

 WAIT  Compiling...9:18:29 AM

 DONE  Compiled successfully in 7074ms9:18:36 AM

 WAIT  Compiling...9:18:36 AM

 DONE  Compiled successfully in 1794ms9:18:38 AM

 WAIT  Compiling...2:08:24 PM

 DONE  Compiled successfully in 1870ms2:08:27 PM

 WAIT  Compiling...2:08:27 PM

 DONE  Compiled successfully in 1216ms2:08:28 PM

 WAIT  Compiling...4:07:13 PM

 DONE  Compiled successfully in 353ms4:07:14 PM

 WAIT  Compiling...5:57:10 PM

 DONE  Compiled successfully in 3984ms5:57:15 PM

 WAIT  Compiling...5:57:15 PM

 DONE  Compiled successfully in 1418ms5:57:17 PM

 WAIT  Compiling...6:04:00 PM

 DONE  Compiled successfully in 392ms6:04:01 PM

 WAIT  Compiling...6:04:01 PM

 DONE  Compiled successfully in 1158ms6:04:02 PM

 WAIT  Compiling...6:04:02 PM

 DONE  Compiled successfully in 1269ms6:04:04 PM

 WAIT  Compiling...1:49:16 PM

 DONE  Compiled successfully in 7953ms1:49:24 PM

 WAIT  Compiling...1:49:24 PM

 DONE  Compiled successfully in 1138ms1:49:26 PM

 WAIT  Compiling...4:42:13 PM

 DONE  Compiled successfully in 1099ms4:42:14 PM

 WAIT  Compiling...4:42:14 PM

 DONE  Compiled successfully in 2236ms4:42:16 PM

 WAIT  Compiling...5:04:17 PM

 DONE  Compiled successfully in 1138ms5:04:19 PM

 WAIT  Compiling...5:04:19 PM

 DONE  Compiled successfully in 2025ms5:04:21 PM

 WAIT  Compiling...8:57:33 AM

 DONE  Compiled successfully in 950ms8:57:34 AM

 WAIT  Compiling...8:57:34 AM

 DONE  Compiled successfully in 1904ms8:57:36 AM

 WAIT  Compiling...1:40:03 PM

 DONE  Compiled successfully in 1281ms1:40:04 PM

 WAIT  Compiling...1:40:04 PM

 DONE  Compiled successfully in 2353ms1:40:07 PM

 WAIT  Compiling...1:43:51 PM

 ERROR  Failed to compile with 1 errors1:43:52 PM

 error  in ./src/components/project/index.vue

Module build failed: TypeError: Cannot read property 'content' of null
    at Object.module.exports (/app/node_modules/vue-loader/lib/selector.js:18:27)

 @ ./src/components/project/index.vue 8:2-102
 @ ./src/router.ts
 @ ./src/main.ts
 @ multi ./build/dev-client ./src/main.ts

 WAIT  Compiling...1:43:52 PM

 DONE  Compiled successfully in 2147ms1:43:55 PM

 WAIT  Compiling...1:47:07 PM

 DONE  Compiled successfully in 885ms1:47:08 PM

 WAIT  Compiling...1:47:09 PM

 DONE  Compiled successfully in 2022ms1:47:11 PM

 WAIT  Compiling...2:04:53 PM

 DONE  Compiled successfully in 166ms2:04:54 PM

 WAIT  Compiling...2:04:54 PM

 DONE  Compiled successfully in 1482ms2:04:55 PM

 WAIT  Compiling...2:04:55 PM

 DONE  Compiled successfully in 1337ms2:04:57 PM

 WAIT  Compiling...2:05:52 PM

 DONE  Compiled successfully in 1390ms2:05:54 PM

 WAIT  Compiling...2:05:54 PM

 DONE  Compiled successfully in 1587ms2:05:56 PM

